refactor(): update CSS layout

--- a/src/main/resources/teampixl/com/pixlpos/fxml/waiterconsole/waiterstage.css
+++ b/src/main/resources/teampixl/com/pixlpos/fxml/waiterconsole/waiterstage.css
@@ -43,6 +43,8 @@
     -fx-background-color: #3B6FD1;
 }
 
+
+/* Menu styling */
 .menu-container {
     -fx-background-color: white;
     -fx-background-radius: 20;
@@ -66,6 +68,7 @@
     -fx-background-color: #dfdddd;
 }
 
+/* Order styling */
 .order-container {
     -fx-background-color: white;
     -fx-background-radius: 20;
@@ -74,6 +77,27 @@
     -fx-border-radius: 7px;
 }
 
+.order-header {
+    -fx-background-color: #EFF4FA;
+}
+
+.order-label {
+    -fx-font-size: 17px;
+    -fx-text-fill: #222b45;
+    -fx-font-family: "Arial", sans-serif;
+}
+
+.time-label, .table-label {
+    -fx-text-fill: #222b45;
+}
+
+/* GridPane styling */
+.grid-pane {
+    -fx-background-color: #FFFFFF;
+    -fx-border-color: #CCCCCC;
+}
+
+/* button styling */
 .correct-buttons, .void-button, .apply-note-button {
     -fx-background-color: #c1c1c1;
     -fx-text-fill: #4a4a4a;
@@ -83,7 +107,6 @@
     -fx-border-radius: 10px;
     -fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.2), 10, 0, 0, 2);
 }
-
 
 .send-button {
     -fx-background-color: #7f9e76;
@@ -112,24 +135,4 @@
 
 .restart-button:hover {
     -fx-background-color: #9a4957;
-}
-
-/* GridPane styling */
-.grid-pane {
-    -fx-background-color: #FFFFFF;
-    -fx-border-color: #CCCCCC;
-}
-
-.order-header {
-    -fx-background-color: #EFF4FA;
-}
-
-.order-label {
-    -fx-font-size: 17px;
-    -fx-text-fill: #222b45;
-    -fx-font-family: "Arial", sans-serif;
-}
-
-.time-label, .table-label {
-    -fx-text-fill: #222b45;
 }
