--- a/src/main/resources/teampixl/com/pixlpos/fxml/adminconsole/AdminStage.fxml
+++ b/src/main/resources/teampixl/com/pixlpos/fxml/adminconsole/AdminStage.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TextArea?>
@@ -19,7 +20,6 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<?import javafx.scene.control.PasswordField?>
 <TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" nodeOrientation="LEFT_TO_RIGHT" prefHeight="1280" prefWidth="1920" side="LEFT" stylesheets="@adminstage.css" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="teampixl.com.pixlpos.controllers.adminconsole.AdminScreenController">
   <tabs>
     <Tab text="Users">
@@ -58,7 +58,7 @@
                               <Insets top="30.0" />
                            </VBox.margin>
                         </HBox>
-                        <GridPane alignment="TOP_CENTER" gridLinesVisible="true" styleClass="grid-pane" fx:id="userTable">
+                        <GridPane fx:id="userTable" alignment="TOP_CENTER" gridLinesVisible="true" styleClass="grid-pane">
                           <columnConstraints>
                             <ColumnConstraints hgrow="SOMETIMES" maxWidth="325.73828125" minWidth="10.0" prefWidth="318.98974609375" />
                             <ColumnConstraints hgrow="SOMETIMES" maxWidth="430.221923828125" minWidth="10.0" prefWidth="275.01025390625" />
@@ -127,42 +127,42 @@
                                     <Insets right="510.0" top="20.0" />
                                  </VBox.margin>
                               </Label>
-                              <TextField alignment="CENTER_RIGHT" prefHeight="45.0" prefWidth="560.0" fx:id="emailField"/>
+                              <TextField fx:id="emailField" alignment="CENTER_RIGHT" prefHeight="45.0" prefWidth="560.0" />
                               <Label prefHeight="40.0" prefWidth="93.0" text="Username">
                                  <VBox.margin>
                                     <Insets right="473.0" top="20.0" />
                                  </VBox.margin>
                               </Label>
-                              <TextField fx:id="usernameField"/>
+                              <TextField fx:id="usernameField" />
                               <Label alignment="CENTER" contentDisplay="BOTTOM" prefHeight="40.0" prefWidth="88.0" text="Password">
                                  <VBox.margin>
                                     <Insets right="475.0" top="20.0" />
                                  </VBox.margin>
                               </Label>
-                              <PasswordField alignment="CENTER_RIGHT" prefHeight="45.0" prefWidth="560.0" fx:id="passwordField" />
+                              <PasswordField fx:id="passwordField" alignment="CENTER_RIGHT" prefHeight="45.0" prefWidth="560.0" />
                               <Label contentDisplay="BOTTOM" prefHeight="40.0" prefWidth="178.0" text="Select Role Type">
                                  <VBox.margin>
                                     <Insets right="390.0" top="20.0" />
                                  </VBox.margin>
                               </Label>
-                              <ChoiceBox prefHeight="50.0" prefWidth="269.0" fx:id="roleField">
+                              <ChoiceBox fx:id="roleField" prefHeight="50.0" prefWidth="269.0">
                                  <VBox.margin>
                                     <Insets right="300.0" />
                                  </VBox.margin>
                               </ChoiceBox>
                               <HBox prefHeight="43.0" prefWidth="569.0">
                                  <children>
-                                    <Button mnemonicParsing="false" styleClass="add-buttons" text="Add User" onAction="#onNewUserButtonClick">
+                                    <Button mnemonicParsing="false" onAction="#onNewUserButtonClick" styleClass="add-buttons" text="Add User">
                                        <HBox.margin>
                                           <Insets left="110.0" right="25.0" />
                                        </HBox.margin>
                                     </Button>
-                                    <Button mnemonicParsing="false" styleClass="submit-button" text="Submit Changes" onAction="#onSubmitChangesButtonClick">
+                                    <Button mnemonicParsing="false" onAction="#onSubmitChangesButtonClick" styleClass="submit-button" text="Submit Changes">
                                        <HBox.margin>
                                           <Insets right="25.0" />
                                        </HBox.margin>
                                     </Button>
-                                    <Button mnemonicParsing="false" styleClass="cancel-button" text="Cancel" onAction="#onCancelButtonClick"/>
+                                    <Button mnemonicParsing="false" onAction="#onCancelButtonClick" styleClass="cancel-button" text="Cancel" />
                                  </children>
                                  <VBox.margin>
                                     <Insets top="150.0" />
@@ -183,8 +183,8 @@
                      <bottom>
                         <ButtonBar buttonMinWidth="144.0" nodeOrientation="RIGHT_TO_LEFT" prefHeight="63.0" prefWidth="1256.0" BorderPane.alignment="CENTER">
                           <buttons>
-                              <Button mnemonicParsing="false" prefHeight="56.0" prefWidth="230.0" styleClass="delete-button" text="Delete User" onAction="#onDeleteUserButtonClick"/>
-                              <Button mnemonicParsing="false" styleClass="edit-button" text="Edit User" textAlignment="CENTER" onAction="#onEditButtonClick"/>
+                              <Button mnemonicParsing="false" onAction="#onDeleteUserButtonClick" prefHeight="56.0" prefWidth="230.0" styleClass="delete-button" text="Delete User" />
+                              <Button mnemonicParsing="false" onAction="#onEditButtonClick" styleClass="edit-button" text="Edit User" textAlignment="CENTER" />
                           </buttons>
                            <opaqueInsets>
                               <Insets />
@@ -207,17 +207,17 @@
                               </Text>
                               <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" styleClass="search-bar-container">
                                  <children>
-                                    <TextField alignment="CENTER" prefHeight="45.0" prefWidth="360.0" promptText="Enter Username:" fx:id="searchField">
+                                    <TextField fx:id="searchField" alignment="CENTER" prefHeight="45.0" prefWidth="360.0" promptText="Enter Username:">
                                        <HBox.margin>
                                           <Insets right="10.0" />
                                        </HBox.margin>
                                     </TextField>
-                                    <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="110.0" styleClass="search-button" text="Search" onAction="#onSearchButtonClick">
+                                    <Button mnemonicParsing="false" onAction="#onSearchButtonClick" prefHeight="40.0" prefWidth="110.0" styleClass="search-button" text="Search">
                                        <HBox.margin>
                                           <Insets right="10.0" />
                                        </HBox.margin>
                                     </Button>
-                                    <Button mnemonicParsing="false" prefHeight="20.0" prefWidth="110.0" styleClass="cancel-button" text="Clear" onAction="#onClearButtonClick"/>
+                                    <Button mnemonicParsing="false" onAction="#onClearButtonClick" prefHeight="20.0" prefWidth="110.0" styleClass="cancel-button" text="Clear" />
                                  </children>
                                  <VBox.margin>
                                     <Insets left="40.0" right="20.0" />
@@ -248,7 +248,7 @@
                                     <Insets left="50.0" top="18.0" />
                                  </HBox.margin>
                               </Text>
-                            <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" prefHeight="26.0" prefWidth="155.0" styleClass="logout-button" text="Logout" onAction="#onExitButtonClick" fx:id="exitButton">
+                            <Button fx:id="exitButton" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#onExitButtonClick" prefHeight="26.0" prefWidth="155.0" styleClass="logout-button" text="Logout">
                                  <font>
                                     <Font name="Monospaced Regular" size="13.0" />
                                  </font>
@@ -390,7 +390,7 @@
                                           <Insets left="64.0" right="25.0" />
                                        </HBox.margin>
                                     </Button>
-                                    <Button mnemonicParsing="false" prefHeight="47.0" prefWidth="183.0" styleClass="submit-button" text="Submit Changes" >
+                                    <Button mnemonicParsing="false" prefHeight="47.0" prefWidth="183.0" styleClass="submit-button" text="Submit Changes">
                                        <HBox.margin>
                                           <Insets right="25.0" />
                                        </HBox.margin>
@@ -481,7 +481,7 @@
                                     <Insets left="50.0" top="18.0" />
                                  </HBox.margin>
                               </Text>
-                              <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" prefHeight="26.0" prefWidth="155.0" styleClass="logout-button" text="Logout" >
+                              <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" prefHeight="26.0" prefWidth="155.0" styleClass="logout-button" text="Logout">
                                  <font>
                                     <Font name="Monospaced Regular" size="13.0" />
                                  </font>
