--- a/src/main/resources/teampixl/com/pixlpos/fxml/adminconsole/adminstage.css
+++ b/src/main/resources/teampixl/com/pixlpos/fxml/adminconsole/adminstage.css
@@ -29,7 +29,7 @@
 }
 
 .logout-button {
-    -fx-alignment: right;
+    -fx-alignment: center-right; /*issue here, needed to be center-right*/
     -fx-background-color: #4A85F6;
     -fx-text-fill: white;
     -fx-font-size: 25px;
