--- a/src/main/resources/teampixl/com/pixlpos/fxml/adminconsole/AdminStage.fxml
+++ b/src/main/resources/teampixl/com/pixlpos/fxml/adminconsole/AdminStage.fxml
@@ -115,7 +115,7 @@
                               <HBox prefHeight="47.0" prefWidth="570.0">
                                  <children>
                                     <TextField alignment="CENTER_RIGHT" prefHeight="45.0" prefWidth="270.0" fx:id="firstNameField"/>
-                                    <TextField prefHeight="45.0" prefWidth="270.0">
+                                    <TextField prefHeight="45.0" prefWidth="270.0" fx:id="lastNameField">
                                        <HBox.margin>
                                           <Insets left="30.0" />
                                        </HBox.margin>
