--- a/src/main/resources/teampixl/com/pixlpos/fxml/cookconsole/CookStage.fxml
+++ b/src/main/resources/teampixl/com/pixlpos/fxml/cookconsole/CookStage.fxml
@@ -16,7 +16,7 @@
       <AnchorPane prefHeight="58.0" prefWidth="1024.0" styleClass="header-container" BorderPane.alignment="CENTER">
          <children>
             <Label layoutX="59.0" layoutY="11.0" styleClass="logo" text="PIXL Services" AnchorPane.bottomAnchor="10.0" AnchorPane.topAnchor="10.0" />
-            <Button fx:id="logout" alignment="CENTER" contentDisplay="CENTER" layoutX="943.0" layoutY="11.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="85.0" styleClass="logout-button" text="Logout" textFill="RED" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="10.0" />
+            <Button fx:id="logoutButton"  onAction="#onLogoutButtonClick" alignment="CENTER" contentDisplay="CENTER" layoutX="943.0" layoutY="11.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="85.0" styleClass="logout-button" text="Logout" textFill="RED" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="10.0" />
          </children>
       </AnchorPane>
    </top>
@@ -25,8 +25,8 @@
          <bottom>
             <HBox alignment="CENTER" prefHeight="76.0" prefWidth="697.0" spacing="30.0" BorderPane.alignment="CENTER">
                <children>
-                  <Button fx:id="refresh" mnemonicParsing="false" prefHeight="49.0" prefWidth="135.0" styleClass="refresh-button" text="Refresh" />
-                  <Button fx:id="complete" layoutX="422.0" layoutY="23.0" mnemonicParsing="false" prefHeight="49.0" prefWidth="135.0" styleClass="complete-button" text="Complete" textFill="#00ff33" />
+                  <Button fx:id="refreshButton" onAction="#onRefreshButtonClick" mnemonicParsing="false" prefHeight="49.0" prefWidth="135.0" styleClass="refresh-button" text="Refresh" />
+                  <Button fx:id="completeButton" onAction="#onCompleteButtonClick" layoutX="422.0" layoutY="23.0" mnemonicParsing="false" prefHeight="49.0" prefWidth="135.0" styleClass="complete-button" text="Complete" textFill="#00ff33" />
                </children>
                <BorderPane.margin>
                   <Insets bottom="20.0" left="10.0" right="20.0" />
