--- a/src/main/resources/teampixl/com/pixlpos/fxml/cookconsole/CookStage.fxml
+++ b/src/main/resources/teampixl/com/pixlpos/fxml/cookconsole/CookStage.fxml
@@ -16,49 +16,14 @@
       <AnchorPane prefHeight="58.0" prefWidth="1024.0" styleClass="header-container" BorderPane.alignment="CENTER">
          <children>
             <Label layoutX="59.0" layoutY="11.0" styleClass="logo" text="PIXL Services" AnchorPane.bottomAnchor="10.0" AnchorPane.topAnchor="10.0" />
-            <Button fx:id="logoutButton"  onAction="#onLogoutButtonClick" alignment="CENTER" contentDisplay="CENTER" layoutX="943.0" layoutY="11.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="85.0" styleClass="logout-button" text="Logout" textFill="RED" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="10.0" />
+            <Button fx:id="logoutButton" alignment="CENTER" contentDisplay="CENTER" layoutX="943.0" layoutY="11.0" mnemonicParsing="false" onAction="#onLogoutButtonClick" prefHeight="40.0" prefWidth="85.0" styleClass="logout-button" text="Logout" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="10.0" />
          </children>
       </AnchorPane>
    </top>
-   <right>
-      <BorderPane prefHeight="604.0" prefWidth="725.0" BorderPane.alignment="CENTER">
-         <bottom>
-            <HBox alignment="CENTER" prefHeight="76.0" prefWidth="697.0" spacing="30.0" BorderPane.alignment="CENTER">
-               <children>
-                  <Button fx:id="refreshButton" onAction="#onRefreshButtonClick" mnemonicParsing="false" prefHeight="49.0" prefWidth="135.0" styleClass="refresh-button" text="Refresh" />
-                  <Button fx:id="completeButton" onAction="#onCompleteButtonClick" layoutX="422.0" layoutY="23.0" mnemonicParsing="false" prefHeight="49.0" prefWidth="135.0" styleClass="complete-button" text="Complete" textFill="#00ff33" />
-               </children>
-               <BorderPane.margin>
-                  <Insets bottom="20.0" left="10.0" right="20.0" />
-               </BorderPane.margin>
-            </HBox>
-         </bottom>
-         <center>
-            <AnchorPane prefHeight="200.0" prefWidth="725.0" styleClass="order-container" BorderPane.alignment="CENTER">
-               <children>
-                  <Label styleClass="order-label" text="Orders" AnchorPane.leftAnchor="5.0" AnchorPane.topAnchor="5.0">
-                     <font>
-                        <Font size="40.0" />
-                     </font>
-                  </Label>
-                  <Line endX="580.0" layoutX="107.0" layoutY="47.0" startX="-100.0" stroke="#4a85f6" strokeWidth="0.5" AnchorPane.leftAnchor="1.0" AnchorPane.rightAnchor="1.0" />
-                  <ListView fx:id="orderview" fixedCellSize="0.0" orientation="HORIZONTAL" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="43.0">
-                     <effect>
-                        <Glow />
-                     </effect>
-                  </ListView>
-               </children>
-               <BorderPane.margin>
-                  <Insets right="20.0" top="20.0" />
-               </BorderPane.margin>
-            </AnchorPane>
-         </center>
-      </BorderPane>
-   </right>
    <left>
-      <AnchorPane prefHeight="670.0" prefWidth="259.0" styleClass="order-container" BorderPane.alignment="CENTER">
+      <AnchorPane prefHeight="622.0" prefWidth="300.0" styleClass="order-container" BorderPane.alignment="CENTER">
          <children>
-            <Label layoutX="55.0" layoutY="3.0" styleClass="order-label" text="Completed Orders" AnchorPane.leftAnchor="48.0" AnchorPane.rightAnchor="48.0" AnchorPane.topAnchor="5.0" />
+            <Label layoutX="70.0" layoutY="27.0" prefHeight="20.0" prefWidth="163.0" styleClass="order-label" text="Completed Orders" AnchorPane.leftAnchor="69.0" AnchorPane.rightAnchor="69.0" AnchorPane.topAnchor="5.0" />
             <ListView layoutX="84.0" layoutY="215.0" AnchorPane.bottomAnchor="1.0" AnchorPane.leftAnchor="1.0" AnchorPane.rightAnchor="1.0" AnchorPane.topAnchor="40.0" />
          </children>
          <BorderPane.margin>
@@ -66,4 +31,39 @@
          </BorderPane.margin>
       </AnchorPane>
    </left>
+   <center>
+      <BorderPane BorderPane.alignment="CENTER">
+         <bottom>
+            <HBox alignment="CENTER" spacing="30.0" BorderPane.alignment="CENTER">
+               <children>
+                  <Button fx:id="refreshButton" mnemonicParsing="false" onAction="#onRefreshButtonClick" prefHeight="49.0" prefWidth="135.0" styleClass="refresh-button" text="Refresh" />
+                  <Button fx:id="completeButton" layoutX="422.0" layoutY="23.0" mnemonicParsing="false" onAction="#onCompleteButtonClick" prefHeight="49.0" prefWidth="135.0" styleClass="complete-button" text="Complete" />
+               </children>
+               <BorderPane.margin>
+                  <Insets bottom="20.0" left="10.0" right="20.0" top="10.0" />
+               </BorderPane.margin>
+            </HBox>
+         </bottom>
+         <center>
+            <AnchorPane styleClass="order-container" BorderPane.alignment="CENTER">
+               <children>
+                  <Label styleClass="order-label" text="Orders" AnchorPane.leftAnchor="5.0" AnchorPane.topAnchor="5.0">
+                     <font>
+                        <Font size="40.0" />
+                     </font>
+                  </Label>
+                  <Line endX="795.0" endY="-7.62939453125E-6" layoutX="107.0" layoutY="47.0" startX="-100.0" strokeWidth="0.5" AnchorPane.leftAnchor="1.0" AnchorPane.rightAnchor="1.0" />
+                  <ListView fx:id="orderview" fixedCellSize="0.0" orientation="HORIZONTAL" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="43.0">
+                     <effect>
+                        <Glow />
+                     </effect>
+                  </ListView>
+               </children>
+               <BorderPane.margin>
+                  <Insets left="10.0" right="20.0" top="20.0" />
+               </BorderPane.margin>
+            </AnchorPane>
+         </center>
+      </BorderPane>
+   </center>
 </fx:root>
