--- a/src/main/resources/teampixl/com/pixlpos/fxml/cookconsole/CookStage.fxml
+++ b/src/main/resources/teampixl/com/pixlpos/fxml/cookconsole/CookStage.fxml
@@ -8,18 +8,11 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Region?>
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
 <fx:root maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" stylesheets="@cookstage.css" type="BorderPane" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="teampixl.com.pixlpos.controllers.cookconsole.CookScreenController">
-   <top>
-      <AnchorPane prefHeight="58.0" prefWidth="1024.0" styleClass="header-container" BorderPane.alignment="CENTER">
-         <children>
-            <Label layoutX="59.0" layoutY="11.0" styleClass="logo" text="PIXL Services" AnchorPane.bottomAnchor="10.0" AnchorPane.topAnchor="10.0" />
-            <Button fx:id="logoutButton" alignment="CENTER" contentDisplay="CENTER" layoutX="943.0" layoutY="11.0" mnemonicParsing="false" onAction="#onLogoutButtonClick" prefHeight="40.0" prefWidth="85.0" styleClass="logout-button" text="Logout" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="10.0" />
-         </children>
-      </AnchorPane>
-   </top>
    <left>
       <AnchorPane prefHeight="622.0" prefWidth="300.0" styleClass="order-container" BorderPane.alignment="CENTER">
          <children>
@@ -52,7 +45,7 @@
                         <Font size="40.0" />
                      </font>
                   </Label>
-                  <Line endX="795.0" endY="-7.62939453125E-6" layoutX="107.0" layoutY="47.0" startX="-100.0" strokeWidth="0.5" AnchorPane.leftAnchor="1.0" AnchorPane.rightAnchor="1.0" />
+                  <Line endX="795.0" endY="-7.62939453125E-6" layoutX="107.0" layoutY="47.0" startX="-100.0" stroke="#4a85f6" strokeWidth="0.5" AnchorPane.leftAnchor="1.0" AnchorPane.rightAnchor="1.0" />
                   <ListView fx:id="orderview" fixedCellSize="0.0" orientation="HORIZONTAL" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="43.0">
                      <effect>
                         <Glow />
@@ -66,4 +59,21 @@
          </center>
       </BorderPane>
    </center>
+   <top>
+      <HBox prefHeight="58.0" prefWidth="1280.0" styleClass="header-container" BorderPane.alignment="CENTER">
+         <children>
+            <Label styleClass="logo" text="PIXL Services">
+               <HBox.margin>
+                  <Insets left="30.0" top="16.0" />
+               </HBox.margin>
+            </Label>
+            <Region HBox.hgrow="ALWAYS" />
+            <Button fx:id="logoutButton" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#onLogoutButtonClick" prefHeight="40.0" prefWidth="85.0" styleClass="logout-button" text="Logout">
+               <HBox.margin>
+                  <Insets right="20.0" top="9.0" />
+               </HBox.margin>
+            </Button>
+         </children>
+      </HBox>
+   </top>
 </fx:root>
