--- a/src/main/resources/teampixl/com/pixlpos/fxml/loginconsole/loginstage.css
+++ b/src/main/resources/teampixl/com/pixlpos/fxml/loginconsole/loginstage.css
@@ -5,14 +5,14 @@
 
 /* Header styling */
 .header {
-    -fx-background-color: #4A6E5C;
+    -fx-background-color: #EFF4FA;
     -fx-padding: 20px;
     -fx-alignment: center;
 }
 
 /* Header label styling */
 .header-label {
-    -fx-text-fill: #FFFFFF;
+    -fx-text-fill: #4A85F6;
     -fx-font-size: 24px;
     -fx-font-weight: bold;
     -fx-font-family: "Arial", sans-serif;
@@ -49,16 +49,16 @@
 
 /* Shadow effect on focus */
 .text-field:focused {
-    -fx-border-color: #2D4737;
+    -fx-border-color: #222b45;
     -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.3), 5, 0, 0, 3);
 }
 
 
 /* Button styling */
 .login-form_container Button {
-    -fx-background-color: #4A6E5C;
+    -fx-background-color: #4A85F6;
     -fx-background-radius: 5px;
-    -fx-font-size: 16px;
+    -fx-font-size: 19px;
     -fx-pref-height: 40px;
     -fx-pref-width: 200px;
     -fx-text-fill: #FFFFFF;
@@ -67,13 +67,20 @@
 
 /* Button hover state */
 .login-form_container Button:hover {
-    -fx-background-color: #366F52;
+    -fx-background-color: #3B6FD1;
+}
+
+/* Label for login form */
+.login-header-label {
+    -fx-text-fill: #333333;
+    -fx-font-size: 24px;
+    -fx-font-weight: bold;
+    -fx-font-family: "Arial", sans-serif;
 }
 
 /* Label for login form */
 .login-label {
     -fx-text-fill: #333333;
-    -fx-font-size: 24px;
-    -fx-font-weight: bold;
+    -fx-font-size: 18px;
     -fx-font-family: "Arial", sans-serif;
 }
