--- a/src/main/resources/teampixl/com/pixlpos/fxml/loginconsole/LoginStage.fxml
+++ b/src/main/resources/teampixl/com/pixlpos/fxml/loginconsole/LoginStage.fxml
@@ -19,12 +19,12 @@
    <center>
       <VBox alignment="CENTER_LEFT" prefHeight="200.0" prefWidth="100.0" style="-fx-background-color: white;" BorderPane.alignment="CENTER">
          <AnchorPane prefHeight="3.0" prefWidth="247.0" style="-fx-background-color: white;" />
-         <HBox>
+         <HBox prefHeight="387.0" prefWidth="920.0">
             <children>
                <Region HBox.hgrow="ALWAYS" />
-               <VBox alignment="TOP_CENTER" prefHeight="352.0" prefWidth="435.0" styleClass="login-form_container">
+               <VBox alignment="TOP_CENTER" prefHeight="387.0" prefWidth="480.0" styleClass="login-form_container">
                   <children>
-                     <AnchorPane prefHeight="78.0" prefWidth="200.0" styleClass="login-title">
+                     <AnchorPane styleClass="login-title">
                         <children>
                            <Label alignment="CENTER" layoutX="42.0" layoutY="10.0" styleClass="login-header-label" text="Staff Portal Login" textAlignment="CENTER" textFill="WHITE" AnchorPane.leftAnchor="70.0" AnchorPane.rightAnchor="70.0">
                               <font>
@@ -32,6 +32,9 @@
                               </font>
                            </Label>
                         </children>
+                        <VBox.margin>
+                           <Insets bottom="25.0" />
+                        </VBox.margin>
                      </AnchorPane>
                      <Label alignment="TOP_LEFT" styleClass="login-label" text="Staff Username" textOverrun="CLIP">
                         <VBox.margin>
@@ -55,8 +58,16 @@
                      </PasswordField>
                      <HBox alignment="CENTER" prefHeight="66.0" prefWidth="375.0" spacing="20.0">
                         <children>
-                           <Button fx:id="exitButton" mnemonicParsing="false" onAction="#onExitButtonClick" prefHeight="30.0" prefWidth="70.0" text="Exit" />
-                           <Button fx:id="loginButton" mnemonicParsing="false" onAction="#onLoginButtonClick" prefHeight="30.0" prefWidth="70.0" text="Login" />
+                           <Button fx:id="exitButton" mnemonicParsing="false" onAction="#onExitButtonClick" prefHeight="30.0" prefWidth="70.0" text="Exit">
+                              <HBox.margin>
+                                 <Insets top="30.0" />
+                              </HBox.margin>
+                           </Button>
+                           <Button fx:id="loginButton" mnemonicParsing="false" onAction="#onLoginButtonClick" prefHeight="30.0" prefWidth="70.0" text="Login">
+                              <HBox.margin>
+                                 <Insets top="30.0" />
+                              </HBox.margin>
+                           </Button>
                         </children>
                         <padding>
                            <Insets left="10.0" right="10.0" />
@@ -70,9 +81,9 @@
       </VBox>
    </center>
    <left>
-      <AnchorPane prefHeight="720.0" prefWidth="360.0" styleClass="header" BorderPane.alignment="CENTER">
+      <AnchorPane prefHeight="720.0" prefWidth="499.0" styleClass="header" BorderPane.alignment="CENTER">
          <children>
-            <Label layoutX="76.0" layoutY="311.0" styleClass="header-label" text="PIXL Services" AnchorPane.bottomAnchor="325.0" AnchorPane.leftAnchor="80.0" AnchorPane.rightAnchor="80.0" AnchorPane.topAnchor="325.0" />
+            <Label layoutX="76.0" layoutY="311.0" styleClass="header-label" text="PIXL Services" AnchorPane.bottomAnchor="320.0" AnchorPane.leftAnchor="130.0" AnchorPane.rightAnchor="130.0" AnchorPane.topAnchor="320.0" />
          </children>
       </AnchorPane>
    </left>
