--- a/src/main/resources/teampixl/com/pixlpos/fxml/loginconsole/LoginStage.fxml
+++ b/src/main/resources/teampixl/com/pixlpos/fxml/loginconsole/LoginStage.fxml
@@ -2,102 +2,168 @@
 
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.image.Image?>
 
-<fx:root maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" stylesheets="@loginstage.css" type="BorderPane" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="teampixl.com.pixlpos.controllers.loginconsole.LoginScreenController">
-   <top>
-      <AnchorPane prefHeight="0.0" prefWidth="600.0" style="-fx-background-color: white;" BorderPane.alignment="CENTER" />
-   </top>
+<fx:root maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
+         prefHeight="720.0" prefWidth="1280.0" type="BorderPane" xmlns="http://javafx.com/javafx/17.0.2-ea"
+         xmlns:fx="http://javafx.com/fxml/1"
+         fx:controller="teampixl.com.pixlpos.controllers.loginconsole.LoginScreenController">
+
+   <!-- Removed the <top> section to allow the left region to extend fully -->
+   <!-- Moved the theme toggle button inside the center region -->
+
    <center>
-      <VBox alignment="CENTER_LEFT" prefHeight="200.0" prefWidth="100.0" style="-fx-background-color: white;" BorderPane.alignment="CENTER">
-         <AnchorPane prefHeight="3.0" prefWidth="247.0" style="-fx-background-color: white;" />
-         <HBox prefHeight="387.0" prefWidth="920.0">
-            <children>
-               <Region HBox.hgrow="ALWAYS" />
-               <VBox alignment="TOP_CENTER" prefHeight="387.0" prefWidth="480.0" styleClass="login-form_container">
-                  <children>
-                     <AnchorPane styleClass="login-title">
-                        <children>
-                           <Label alignment="CENTER" layoutX="42.0" layoutY="10.0" styleClass="login-header-label" text="Staff Portal Login" textAlignment="CENTER" textFill="WHITE" AnchorPane.leftAnchor="70.0" AnchorPane.rightAnchor="70.0">
-                              <font>
-                                 <Font size="20.0" />
-                              </font>
-                           </Label>
-                        </children>
-                        <VBox.margin>
-                           <Insets bottom="25.0" />
-                        </VBox.margin>
-                     </AnchorPane>
-                     <Label alignment="TOP_LEFT" styleClass="login-label" text="Staff Username" textOverrun="CLIP">
-                        <VBox.margin>
-                           <Insets left="10.0" />
-                        </VBox.margin>
-                     </Label>
-                     <TextField fx:id="usernameField" alignment="BOTTOM_CENTER" styleClass="login-form_container">
-                        <VBox.margin>
-                           <Insets left="10.0" right="10.0" />
-                        </VBox.margin>
-                     </TextField>
-                     <HBox alignment="CENTER" spacing="10.0">
-                        <PasswordField fx:id="passwordField" alignment="BOTTOM_CENTER" styleClass="text-field" visible="true" managed="true">
+      <BorderPane BorderPane.alignment="CENTER">
+         <!-- Theme toggle button placed at the top-right corner -->
+         <top>
+            <HBox alignment="TOP_RIGHT" spacing="10.0">
+               <padding>
+                  <Insets top="10.0" right="10.0" bottom="0.0" left="0.0"/>
+               </padding>
+               <children>
+                  <Region HBox.hgrow="ALWAYS" />
+                  <Button fx:id="themeToggleButton" onAction="#toggleDarkMode" styleClass="theme-toggle-button">
+                     <graphic>
+                        <ImageView fx:id="themeToggleIcon">
+                           <image>
+                              <Image url="@TOGGLE_OFF.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
+                  </Button>
+               </children>
+            </HBox>
+         </top>
+
+         <center>
+            <HBox>
+               <children>
+                  <Region HBox.hgrow="ALWAYS" />
+                  <VBox alignment="TOP_CENTER" prefWidth="480.0"
+                        styleClass="login-form_container">
+                     <children>
+                        <!-- Login Title -->
+                        <AnchorPane styleClass="login-title">
+                           <children>
+                              <Label alignment="CENTER"
+                                     styleClass="login-header-label" text="Staff Portal Login"
+                                     textAlignment="CENTER">
+                                 <font>
+                                    <Font size="20.0" />
+                                 </font>
+                              </Label>
+                           </children>
                            <VBox.margin>
-                              <Insets left="10.0" right="10.0" />
+                              <Insets bottom="25.0" />
                            </VBox.margin>
-                        </PasswordField>
-                        <TextField fx:id="passwordVisibleField" alignment="BOTTOM_CENTER" styleClass="text-field" visible="false" managed="false">
+                        </AnchorPane>
+
+                        <!-- Username Label and Field -->
+                        <Label alignment="TOP_LEFT" styleClass="login-label" text="Staff Username"
+                               textOverrun="CLIP">
+                           <VBox.margin>
+                              <Insets left="10.0" />
+                           </VBox.margin>
+                        </Label>
+                        <TextField fx:id="usernameField" styleClass="text-field">
                            <VBox.margin>
                               <Insets left="10.0" right="10.0" />
                            </VBox.margin>
                         </TextField>
-                        <Button fx:id="eyeButton" onAction="#togglePasswordVisibility">
-                           <graphic>
-                              <ImageView fx:id="eyeIcon" fitWidth="20" fitHeight="20">
-                                 <image>
-                                    <Image url="@/teampixl/com/pixlpos/images/loginscreen/EYE_CLOSED_ICON.png" />
-                                 </image>
-                              </ImageView>
-                           </graphic>
-                        </Button>
-                     </HBox>
 
-                     <HBox alignment="CENTER" prefHeight="66.0" prefWidth="375.0" spacing="20.0">
-                        <children>
-                           <Button fx:id="exitButton" mnemonicParsing="false" onAction="#onExitButtonClick" prefHeight="30.0" prefWidth="70.0" text="Exit">
-                              <HBox.margin>
-                                 <Insets top="30.0" />
-                              </HBox.margin>
-                           </Button>
-                           <Button fx:id="loginButton" mnemonicParsing="false" onAction="#onLoginButtonClick" prefHeight="30.0" prefWidth="70.0" text="Login">
-                              <HBox.margin>
-                                 <Insets top="30.0" />
-                              </HBox.margin>
-                           </Button>
-                        </children>
-                        <padding>
-                           <Insets left="10.0" right="10.0" />
-                        </padding>
-                     </HBox>
-                  </children>
-               </VBox>
-               <Region HBox.hgrow="ALWAYS" />
-            </children>
-         </HBox>
-      </VBox>
+                        <!-- Password Label -->
+                        <Label alignment="CENTER" styleClass="login-label" text="Password">
+                           <VBox.margin>
+                              <Insets left="10.0" />
+                           </VBox.margin>
+                        </Label>
+
+                        <!-- Password Field with Eye Button -->
+                        <StackPane>
+                           <children>
+                              <!-- PasswordField -->
+                              <PasswordField fx:id="passwordField" styleClass="text-field">
+                                 <StackPane.margin>
+                                    <Insets left="10.0" right="10.0" />
+                                 </StackPane.margin>
+                              </PasswordField>
+
+                              <!-- TextField for visible password -->
+                              <TextField fx:id="passwordVisibleField" styleClass="text-field"
+                                         visible="false" managed="false">
+                                 <StackPane.margin>
+                                    <Insets left="10.0" right="10.0" />
+                                 </StackPane.margin>
+                              </TextField>
+
+                              <!-- Eye Button -->
+                              <Button fx:id="eyeButton" styleClass="eye-button"
+                                      onAction="#togglePasswordVisibility" focusTraversable="false"
+                                      maxWidth="20" maxHeight="20" prefWidth="20" prefHeight="20"
+                                      opacity="0.7">
+                                 <graphic>
+                                    <ImageView fx:id="eyeIcon" fitWidth="20" fitHeight="20">
+                                       <image>
+                                          <Image url="@EYE_CLOSED_ICON.png" />
+                                       </image>
+                                    </ImageView>
+                                 </graphic>
+                                 <StackPane.alignment>CENTER_RIGHT</StackPane.alignment>
+                                 <StackPane.margin>
+                                    <Insets right="30.0" />
+                                 </StackPane.margin>
+                              </Button>
+                           </children>
+                        </StackPane>
+
+                        <!-- Buttons for Exit and Login -->
+                        <HBox alignment="CENTER" prefHeight="66.0" prefWidth="375.0" spacing="20.0">
+                           <children>
+                              <Button fx:id="exitButton" onAction="#onExitButtonClick"
+                                      prefHeight="30.0" prefWidth="70.0" text="Exit">
+                                 <HBox.margin>
+                                    <Insets top="30.0" />
+                                 </HBox.margin>
+                              </Button>
+                              <Button fx:id="loginButton" onAction="#onLoginButtonClick"
+                                      prefHeight="30.0" prefWidth="70.0" text="Login">
+                                 <HBox.margin>
+                                    <Insets top="30.0" />
+                                 </HBox.margin>
+                              </Button>
+                           </children>
+                           <padding>
+                              <Insets left="10.0" right="10.0" />
+                           </padding>
+                        </HBox>
+                     </children>
+                  </VBox>
+                  <Region HBox.hgrow="ALWAYS" />
+               </children>
+            </HBox>
+         </center>
+      </BorderPane>
    </center>
+
    <left>
-      <AnchorPane prefHeight="720.0" prefWidth="499.0" styleClass="header" BorderPane.alignment="CENTER">
+      <!-- Changed AnchorPane to StackPane and removed fixed sizes -->
+      <StackPane styleClass="header" BorderPane.alignment="CENTER">
          <children>
-            <Label layoutX="150.0" layoutY="342.0" styleClass="header-label" text="PIXL Services" />
+            <Label styleClass="header-label" text="PIXL Services" />
          </children>
-      </AnchorPane>
+      </StackPane>
    </left>
+
    <right>
-      <AnchorPane prefHeight="400.0" prefWidth="0.0" style="-fx-background-color: white;" BorderPane.alignment="CENTER" />
+      <AnchorPane styleClass="anchor-pane" BorderPane.alignment="CENTER" />
    </right>
+
    <bottom>
-      <AnchorPane prefHeight="0.0" prefWidth="600.0" style="-fx-background-color: white;" BorderPane.alignment="CENTER" />
+      <AnchorPane styleClass="anchor-pane" BorderPane.alignment="CENTER" />
    </bottom>
 </fx:root>
+
+
